[gd_scene load_steps=43 format=2]

[ext_resource path="res://Entities/Player/scr_player.gd" type="Script" id=1]
[ext_resource path="res://Entities/Player/proto_floor.png" type="Texture" id=2]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player3.png" type="Texture" id=3]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player2.png" type="Texture" id=4]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player20.png" type="Texture" id=5]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player21.png" type="Texture" id=6]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player22.png" type="Texture" id=7]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player23.png" type="Texture" id=8]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player16.png" type="Texture" id=9]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player17.png" type="Texture" id=10]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player18.png" type="Texture" id=11]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player19.png" type="Texture" id=12]
[ext_resource path="res://Entities/Player/spr_player_base.png" type="Texture" id=13]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player4.png" type="Texture" id=14]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player5.png" type="Texture" id=15]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player6.png" type="Texture" id=16]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player7.png" type="Texture" id=17]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player8.png" type="Texture" id=18]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player9.png" type="Texture" id=19]
[ext_resource path="res://Entities/Player/Animations/spr_idle/spr-player-idle-up.png" type="Texture" id=20]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player10.png" type="Texture" id=21]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player11.png" type="Texture" id=22]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player12.png" type="Texture" id=23]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player13.png" type="Texture" id=24]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player14.png" type="Texture" id=25]
[ext_resource path="res://Entities/Player/Animations/test_animations/spr-flow-player15.png" type="Texture" id=26]
[ext_resource path="res://Entities/Player/scr_player_state_machine.gd" type="Script" id=27]
[ext_resource path="res://Entities/Player/States/scr_idle.gd" type="Script" id=28]
[ext_resource path="res://Entities/Player/States/scr_damage.gd" type="Script" id=29]
[ext_resource path="res://Entities/Player/States/scr_move.gd" type="Script" id=30]
[ext_resource path="res://Entities/Player/States/scr_dash.gd" type="Script" id=31]
[ext_resource path="res://Entities/Player/scr_player_ui.gd" type="Script" id=32]
[ext_resource path="res://GUI/PlayerGUI/spr_dash_bar.png" type="Texture" id=33]
[ext_resource path="res://GUI/PlayerGUI/spr_health_orb_ui3.png" type="Texture" id=34]
[ext_resource path="res://GUI/PlayerGUI/spr_health_orb_ui2.png" type="Texture" id=35]
[ext_resource path="res://GUI/PlayerGUI/spr_health_orb_ui.png" type="Texture" id=36]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.00740741, 0.840741, 0.977778 )
colors = PoolColorArray( 0.513726, 0.560784, 0.996078, 0.501961, 0.558609, 0.601388, 0.990692, 0.449576, 0.891075, 0.902155, 0.95079, 0.0615431, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 2 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "move_up",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "move_down",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "move_right",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": false,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "move_left",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 10.5061

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
z_index = 10
collision_layer = 2
script = ExtResource( 1 )
health_points = 3
move_speed = 100

[node name="Trail" type="Particles2D" parent="."]
modulate = Color( 0.552941, 0.521569, 0.996078, 1 )
emitting = false
amount = 10
speed_scale = 2.0
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.214645 )
frames = SubResource( 4 )
animation = "idle_left"

[node name="MoveBox" type="CollisionShape2D" parent="." groups=[
"HURTBOX",
]]
position = Vector2( 0, 0.179489 )
shape = SubResource( 5 )

[node name="DashHitTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCoolDown" type="Timer" parent="."]
wait_time = 0.5

[node name="StateMachine" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 27 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 28 )

[node name="Damage" type="Node" parent="StateMachine"]
script = ExtResource( 29 )
damage_time = 0.2

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 30 )

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource( 31 )

[node name="UI" type="Node2D" parent="." groups=[
"Player",
]]
position = Vector2( 0, -20 )
script = ExtResource( 32 )

[node name="DashCooldownBar" type="TextureProgress" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.8712
margin_top = 42.2613
margin_right = 33.1288
margin_bottom = 82.2613
value = 100.0
texture_under = ExtResource( 33 )
texture_progress = ExtResource( 33 )
tint_under = Color( 0.0588235, 0.176471, 0.286275, 1 )
tint_progress = Color( 0.607843, 0.92549, 0.901961, 1 )

[node name="HealthUI" type="AnimatedSprite" parent="UI"]
frames = SubResource( 6 )
frame = 2
__meta__ = {
"_edit_lock_": true
}
[connection signal="player_damaged" from="." to="UI" method="_on_Player_player_damaged"]
[connection signal="timeout" from="DashHitTimer" to="." method="_on_DashHitTimer_timeout"]
